--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-performance",
+  "title": "React Performance",
   "version": "1.0.0",
   "description": "React Performance Workshop",
   "keywords": [],
