--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
-    "@testing-library/jest-dom": "^4.2.0",
-    "@testing-library/react": "^9.2.0",
+    "@testing-library/jest-dom": "^4.2.3",
+    "@testing-library/react": "^9.3.2",
     "chalk": "^2.4.2",
-    "downshift": "^3.4.0",
+    "downshift": "^3.4.1",
+    "glob": "^7.1.5",
     "history": "^4.10.1",
     "match-sorter": "^4.0.2",
     "preval.macro": "^3.0.0",
