--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
     "yarn": ">=1"
   },
   "dependencies": {
-    "@reach/router": "^1.2.1",
-    "@testing-library/jest-dom": "^4.2.3",
-    "@testing-library/react": "^9.3.2",
-    "chalk": "^2.4.2",
-    "downshift": "^3.4.1",
-    "glob": "^7.1.5",
+    "@testing-library/jest-dom": "^5.0.2",
+    "@testing-library/react": "^9.4.0",
+    "chalk": "^3.0.0",
+    "downshift": "^4.0.7",
+    "glob": "^7.1.6",
     "history": "^4.10.1",
     "match-sorter": "^4.0.2",
-    "preval.macro": "^3.0.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "preval.macro": "^4.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-window": "^1.8.5",
-    "stop-runaway-react-effects": "^1.2.0",
-    "use-interval": "^1.1.0",
+    "stop-runaway-react-effects": "^1.2.1",
+    "use-interval": "^1.2.1",
     "vanilla-tilt": "^1.7.0",
-    "workerize": "^0.1.7",
+    "workerize": "^0.1.8",
     "workerize-loader": "^1.1.0"
   },
   "devDependencies": {
     "cross-spawn": "^7.0.1",
-    "eslint": "^6.6.0",
-    "husky": "^3.0.9",
-    "inquirer": "^7.0.0",
+    "eslint": "^6.8.0",
+    "husky": "^4.2.0",
+    "inquirer": "^7.0.3",
     "is-ci": "^2.0.0",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.17.1",
-    "react-scripts": "^3.2.0",
-    "replace-in-file": "^4.2.0",
-    "serve": "^11.2.0"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
+    "react-scripts": "^3.3.0",
+    "replace-in-file": "^5.0.2",
+    "serve": "^11.3.0"
   },
   "scripts": {
     "serve": "serve -s build",
