--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-performance",
+  "private": true,
   "title": "React Performance ⚡",
   "version": "1.0.0",
   "description": "React Performance Workshop",
@@ -8,50 +9,39 @@
   "license": "GPL-3.0-only",
   "main": "src/index.js",
   "engines": {
-    "node": ">=8",
-    "npm": ">=6",
-    "yarn": ">=1"
+    "node": ">=10",
+    "npm": ">=6"
   },
   "dependencies": {
+    "@kentcdodds/react-workshop-app": "^2.5.1",
     "@testing-library/jest-dom": "^5.0.2",
     "@testing-library/react": "^9.4.0",
     "chalk": "^3.0.0",
     "downshift": "^4.0.7",
-    "glob": "^7.1.6",
     "history": "^4.10.1",
     "match-sorter": "^4.0.2",
-    "preval.macro": "^4.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
+    "codegen.macro": "^3.0.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-window": "^1.8.5",
-    "stop-runaway-react-effects": "^1.2.1",
     "use-interval": "^1.2.1",
     "vanilla-tilt": "^1.7.0",
     "workerize": "^0.1.8",
     "workerize-loader": "^1.1.0"
   },
   "devDependencies": {
-    "cross-spawn": "^7.0.1",
-    "eslint": "^6.8.0",
-    "husky": "^4.2.0",
-    "inquirer": "^7.0.3",
-    "is-ci": "^2.0.0",
+    "husky": "^4.2.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "react-scripts": "^3.3.0",
-    "replace-in-file": "^5.0.2",
-    "serve": "^11.3.0"
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
-    "serve": "serve -s build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:profile": "react-scripts build --profile",
     "test": "react-scripts test --env=jsdom",
     "test:coverage": "npm run test -- --watchAll=false --coverage",
     "test:exercises": "npm run test -- testing.*exercises\\/ --onlyChanged",
-    "setup": "node ./scripts/setup && npm run validate && node ./scripts/autofill-feedback-email.js",
+    "setup": "node ./scripts/setup",
     "lint": "eslint .",
     "validate": "npm-run-all --parallel build test:coverage lint"
   },
@@ -62,11 +52,16 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/exercises-final/**/*.js"
+      "src/final/**/*.js"
     ]
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "babel": {
+    "presets": [
+      "babel-preset-react-app"
+    ]
   },
   "browserslist": {
     "development": [
