--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "npm": ">=6"
   },
   "dependencies": {
+    "@jackfranklin/test-data-bot": "^1.3.0",
     "@kentcdodds/react-workshop-app": "^2.10.0",
-    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.4",
     "chalk": "^4.0.0",
     "codegen.macro": "^4.0.0",
     "d3-geo": "^1.12.0",
-    "downshift": "^5.2.5",
+    "downshift": "^5.3.0",
     "history": "^4.10.1",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "lodash": "^4.17.15",
@@ -28,12 +29,12 @@
     "react-dom": "^16.13.1",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15",
-    "react-window": "^1.8.5",
+    "react-virtual": "^2.1.10",
     "topojson-client": "^3.1.0",
     "use-interval": "^1.2.1",
     "vanilla-tilt": "^1.7.0",
     "workerize": "^0.1.8",
-    "workerize-loader": "^1.1.0"
+    "workerize-loader": "~1.1.0"
   },
   "devDependencies": {
     "husky": "^4.2.5",
