--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies": {
     "@jackfranklin/test-data-bot": "^1.3.0",
-    "@kentcdodds/react-workshop-app": "^2.10.0",
-    "@testing-library/jest-dom": "^5.7.0",
+    "@kentcdodds/react-workshop-app": "^2.11.0",
+    "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.0.4",
     "chalk": "^4.0.0",
     "codegen.macro": "^4.0.0",
-    "d3-geo": "^1.12.0",
-    "downshift": "^5.3.0",
+    "d3-geo": "^1.12.1",
+    "downshift": "^5.4.2",
     "history": "^4.10.1",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "lodash": "^4.17.15",
@@ -29,19 +29,19 @@
     "react-dom": "^16.13.1",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15",
-    "react-virtual": "^2.1.10",
+    "react-virtual": "^2.2.0",
     "topojson-client": "^3.1.0",
     "use-interval": "^1.2.1",
     "vanilla-tilt": "^1.7.0",
     "workerize": "^0.1.8",
-    "workerize-loader": "~1.1.0"
+    "workerize-loader": "^1.2.1"
   },
   "devDependencies": {
     "husky": "^4.2.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "react-scripts": "^3.4.1",
-    "serve": "^11.3.0"
+    "serve": "^11.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
