--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "d3-geo": "^1.12.1",
     "downshift": "^5.4.2",
     "history": "^4.10.1",
-    "jared-recoil": "0.0.15",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "lodash": "^4.17.15",
     "match-sorter": "^4.1.0",
@@ -31,6 +30,7 @@
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15",
     "react-virtual": "^2.2.0",
+    "recoil": "0.0.8",
     "topojson-client": "^3.1.0",
     "use-interval": "^1.2.1",
     "vanilla-tilt": "^1.7.0",
