--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   },
   "dependencies": {
     "@jackfranklin/test-data-bot": "^1.3.0",
-    "@kentcdodds/react-workshop-app": "^2.12.0",
-    "@testing-library/jest-dom": "^5.11.0",
-    "@testing-library/react": "^10.4.4",
-    "@testing-library/user-event": "^12.0.11",
+    "@kentcdodds/react-workshop-app": "^2.14.1",
+    "@testing-library/jest-dom": "^5.11.3",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.1.1",
     "chalk": "^4.1.0",
     "codegen.macro": "^4.0.0",
     "d3-geo": "^1.12.1",
-    "downshift": "^5.4.5",
+    "downshift": "^6.0.5",
     "history": "^5.0.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
-    "lodash": "^4.17.15",
-    "match-sorter": "^4.1.0",
+    "lodash": "^4.17.20",
+    "match-sorter": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.15",
-    "react-virtual": "^2.2.1",
+    "react-virtual": "^2.2.4",
     "recoil": "0.0.10",
     "topojson-client": "^3.1.0",
     "use-interval": "^1.2.1",
@@ -42,7 +42,7 @@
     "husky": "^4.2.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^4.0.0-next.77",
     "serve": "^11.3.2"
   },
   "scripts": {
