--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "d3-geo": "^1.12.1",
     "downshift": "^6.0.5",
     "history": "^5.0.0",
-    "jest-environment-jsdom-sixteen": "^1.0.3",
     "lodash": "^4.17.20",
     "match-sorter": "^4.2.0",
     "react": "^16.13.1",
@@ -50,7 +49,7 @@
     "build": "react-scripts build",
     "build:profile": "react-scripts build --profile",
     "serve": "serve -s build",
-    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test": "react-scripts test",
     "test:coverage": "npm run test -- --watchAll=false --coverage",
     "test:exercises": "npm run test -- testing.*exercises\\/ --onlyChanged",
     "setup": "node ./scripts/setup",
