--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "workerize-loader": "^1.3.0"
   },
   "devDependencies": {
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "husky": "^4.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
