--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
   },
   "dependencies": {
     "@jackfranklin/test-data-bot": "^1.3.0",
-    "@kentcdodds/react-workshop-app": "^3.0.1",
+    "@kentcdodds/react-workshop-app": "^3.1.1",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.1",
     "chalk": "^4.1.0",
     "codegen.macro": "^4.1.0",
     "d3-geo": "^2.0.1",
     "downshift": "^6.1.0",
     "history": "^5.0.0",
-    "lodash": "^4.17.20",
-    "match-sorter": "^6.1.0",
+    "lodash": "^4.17.21",
+    "match-sorter": "^6.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-spring": "^8.0.27",
-    "react-use-gesture": "^9.0.0",
+    "react-use-gesture": "^9.1.2",
     "react-virtual": "^2.4.0",
     "recoil": "0.1.2",
     "topojson-client": "^3.1.0",
@@ -38,12 +38,12 @@
     "workerize-loader": "^1.3.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "husky": "^4.3.8",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^4.0.3",
     "serve": "^11.3.2"
   },
   "scripts": {
@@ -56,6 +56,7 @@
     "test:exercises": "npm run test -- testing.*exercises\\/ --onlyChanged",
     "setup": "node setup",
     "lint": "eslint .",
+    "format": "prettier --write \"./src\"",
     "validate": "npm-run-all --parallel build:profile test:coverage lint"
   },
   "husky": {
